// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing graphql request producers MUTATION producers Testing validateAProducer(Producer id) should change the validation state of a producer to false 1`] = `
Object {
  "data": Object {
    "validateAProducer": Object {
      "description": "Un vrai payouz!",
      "email": "antoine@paysan.ch",
      "emailValidated": false,
      "firstname": "Antoine",
      "followers": Array [],
      "followingProducers": Array [],
      "image": "Ceci est l'image d'un tueur encodée en base64!",
      "isAdmin": false,
      "isValidated": false,
      "lastname": "Rochaille",
      "phoneNumber": "0761435196",
      "products": Array [
        Object {
          "description": "Une pomme monnnnstre bonne!",
          "productType": Object {
            "category": Object {
              "image": "ceci est une image de fruits encodée en base64!",
              "name": "Fruits",
            },
            "image": "ceci est une image de pomme encodée en base64!",
            "name": "Pomme",
            "producers": Array [
              Object {
                "email": "benoit@paysan.ch",
                "firstname": "Benoît",
                "lastname": "Schöpfli",
              },
              Object {
                "email": "antoine@paysan.ch",
                "firstname": "Antoine",
                "lastname": "Rochaille",
              },
            ],
          },
        },
      ],
      "rating": null,
      "salespoint": null,
      "website": null,
    },
  },
}
`;

exports[`Testing graphql request producers MUTATION producers Testing validateAProducer(Producer id) should change the validation state of a producer to true 1`] = `
Object {
  "data": Object {
    "validateAProducer": Object {
      "description": "Un vrai payouz!",
      "email": "antoine@paysan.ch",
      "emailValidated": false,
      "firstname": "Antoine",
      "followers": Array [],
      "followingProducers": Array [],
      "image": "Ceci est l'image d'un tueur encodée en base64!",
      "isAdmin": false,
      "isValidated": true,
      "lastname": "Rochaille",
      "phoneNumber": "0761435196",
      "products": Array [
        Object {
          "description": "Une pomme monnnnstre bonne!",
          "productType": Object {
            "category": Object {
              "image": "ceci est une image de fruits encodée en base64!",
              "name": "Fruits",
            },
            "image": "ceci est une image de pomme encodée en base64!",
            "name": "Pomme",
            "producers": Array [
              Object {
                "email": "benoit@paysan.ch",
                "firstname": "Benoît",
                "lastname": "Schöpfli",
              },
              Object {
                "email": "antoine@paysan.ch",
                "firstname": "Antoine",
                "lastname": "Rochaille",
              },
            ],
          },
        },
      ],
      "rating": null,
      "salespoint": null,
      "website": null,
    },
  },
}
`;

exports[`Testing graphql request producers QUERY producers Testing filterProducers(ProductType) should get all producers producing one or more products of productType "apple" 1`] = `
Object {
  "data": Object {
    "filterProducers": Array [
      Object {
        "description": "Un chouet gaillard!",
        "email": "benoit@paysan.ch",
        "emailValidated": false,
        "firstname": "Benoît",
        "followers": Array [],
        "followingProducers": Array [],
        "image": "Ceci est une image encodée en base64!",
        "isAdmin": false,
        "isValidated": false,
        "lastname": "Schöpfli",
        "phoneNumber": "0761435196",
        "products": Array [
          Object {
            "description": "Une pomme monnnnstre bonne!",
            "productType": Object {
              "category": Object {
                "image": "ceci est une image de fruits encodée en base64!",
                "name": "Fruits",
              },
              "image": "ceci est une image de pomme encodée en base64!",
              "name": "Pomme",
              "producers": Array [
                Object {
                  "email": "benoit@paysan.ch",
                  "firstname": "Benoît",
                  "lastname": "Schöpfli",
                },
                Object {
                  "email": "antoine@paysan.ch",
                  "firstname": "Antoine",
                  "lastname": "Rochaille",
                },
              ],
            },
          },
          Object {
            "description": "Une poire de folie!",
            "productType": Object {
              "category": Object {
                "image": "ceci est une image de fruits encodée en base64!",
                "name": "Fruits",
              },
              "image": "ceci est une image de poire encodée en base64!",
              "name": "Poire",
              "producers": Array [
                Object {
                  "email": "benoit@paysan.ch",
                  "firstname": "Benoît",
                  "lastname": "Schöpfli",
                },
              ],
            },
          },
        ],
        "rating": null,
        "salespoint": Object {
          "address": Object {
            "city": "Yverdon",
            "country": "Suisse",
            "latitude": 1.123456789,
            "longitude": 1.1234567,
            "number": 6,
            "postalCode": "1400",
            "state": "Vaud",
            "street": "Chemin de par ici",
          },
          "name": "Chez moi",
          "schedule": Object {
            "friday": Array [
              Object {
                "closingHour": "12:00",
                "openingHour": "08:00",
              },
            ],
            "monday": Array [
              Object {
                "closingHour": "12:00",
                "openingHour": "08:00",
              },
              Object {
                "closingHour": "18:00",
                "openingHour": "13:00",
              },
            ],
            "saturday": Array [],
            "sunday": Array [],
            "thursday": Array [],
            "tuesday": Array [],
            "wednesday": Array [
              Object {
                "closingHour": "12:00",
                "openingHour": "08:00",
              },
            ],
          },
        },
        "website": "benoitpaysan.ch",
      },
      Object {
        "description": "Un vrai payouz!",
        "email": "antoine@paysan.ch",
        "emailValidated": false,
        "firstname": "Antoine",
        "followers": Array [],
        "followingProducers": Array [],
        "image": "Ceci est l'image d'un tueur encodée en base64!",
        "isAdmin": false,
        "isValidated": false,
        "lastname": "Rochaille",
        "phoneNumber": "0761435196",
        "products": Array [
          Object {
            "description": "Une pomme monnnnstre bonne!",
            "productType": Object {
              "category": Object {
                "image": "ceci est une image de fruits encodée en base64!",
                "name": "Fruits",
              },
              "image": "ceci est une image de pomme encodée en base64!",
              "name": "Pomme",
              "producers": Array [
                Object {
                  "email": "benoit@paysan.ch",
                  "firstname": "Benoît",
                  "lastname": "Schöpfli",
                },
                Object {
                  "email": "antoine@paysan.ch",
                  "firstname": "Antoine",
                  "lastname": "Rochaille",
                },
              ],
            },
          },
        ],
        "rating": null,
        "salespoint": null,
        "website": null,
      },
    ],
  },
}
`;

exports[`Testing graphql request producers QUERY producers Testing filterProducers(ProductType) should get all producers producing one or more products of productTypeCategory "perry" 1`] = `
Object {
  "data": Object {
    "filterProducers": Array [
      Object {
        "description": "Un chouet gaillard!",
        "email": "benoit@paysan.ch",
        "emailValidated": false,
        "firstname": "Benoît",
        "followers": Array [],
        "followingProducers": Array [],
        "image": "Ceci est une image encodée en base64!",
        "isAdmin": false,
        "isValidated": false,
        "lastname": "Schöpfli",
        "phoneNumber": "0761435196",
        "products": Array [
          Object {
            "description": "Une pomme monnnnstre bonne!",
            "productType": Object {
              "category": Object {
                "image": "ceci est une image de fruits encodée en base64!",
                "name": "Fruits",
              },
              "image": "ceci est une image de pomme encodée en base64!",
              "name": "Pomme",
              "producers": Array [
                Object {
                  "email": "benoit@paysan.ch",
                  "firstname": "Benoît",
                  "lastname": "Schöpfli",
                },
                Object {
                  "email": "antoine@paysan.ch",
                  "firstname": "Antoine",
                  "lastname": "Rochaille",
                },
              ],
            },
          },
          Object {
            "description": "Une poire de folie!",
            "productType": Object {
              "category": Object {
                "image": "ceci est une image de fruits encodée en base64!",
                "name": "Fruits",
              },
              "image": "ceci est une image de poire encodée en base64!",
              "name": "Poire",
              "producers": Array [
                Object {
                  "email": "benoit@paysan.ch",
                  "firstname": "Benoît",
                  "lastname": "Schöpfli",
                },
              ],
            },
          },
        ],
        "rating": null,
        "salespoint": Object {
          "address": Object {
            "city": "Yverdon",
            "country": "Suisse",
            "latitude": 1.123456789,
            "longitude": 1.1234567,
            "number": 6,
            "postalCode": "1400",
            "state": "Vaud",
            "street": "Chemin de par ici",
          },
          "name": "Chez moi",
          "schedule": Object {
            "friday": Array [
              Object {
                "closingHour": "12:00",
                "openingHour": "08:00",
              },
            ],
            "monday": Array [
              Object {
                "closingHour": "12:00",
                "openingHour": "08:00",
              },
              Object {
                "closingHour": "18:00",
                "openingHour": "13:00",
              },
            ],
            "saturday": Array [],
            "sunday": Array [],
            "thursday": Array [],
            "tuesday": Array [],
            "wednesday": Array [
              Object {
                "closingHour": "12:00",
                "openingHour": "08:00",
              },
            ],
          },
        },
        "website": "benoitpaysan.ch",
      },
    ],
  },
}
`;

exports[`Testing graphql request producers QUERY producers Testing producer(ProducerId) should fail getting a producer because invalid id received (too long) 1`] = `
Object {
  "data": Object {
    "producer": null,
  },
  "errors": Array [
    [GraphQLError: Received producer.id is invalid!],
  ],
}
`;

exports[`Testing graphql request producers QUERY producers Testing producer(ProducerId) should fail getting a producer because invalid id received (too short) 1`] = `
Object {
  "data": Object {
    "producer": null,
  },
  "errors": Array [
    [GraphQLError: Received producer.id is invalid!],
  ],
}
`;

exports[`Testing graphql request producers QUERY producers Testing producer(ProducerId) should fail getting a producer because unknown id received 1`] = `
Object {
  "data": Object {
    "producer": null,
  },
}
`;

exports[`Testing graphql request producers QUERY producers Testing producer(ProducerId) should get a producer by id (with salespoint) 1`] = `
Object {
  "data": Object {
    "producer": Object {
      "description": "Un chouet gaillard!",
      "email": "benoit@paysan.ch",
      "emailValidated": false,
      "firstname": "Benoît",
      "followers": Array [],
      "followingProducers": Array [],
      "image": "Ceci est une image encodée en base64!",
      "isAdmin": false,
      "isValidated": false,
      "lastname": "Schöpfli",
      "phoneNumber": "0761435196",
      "products": Array [
        Object {
          "description": "Une pomme monnnnstre bonne!",
          "productType": Object {
            "category": Object {
              "image": "ceci est une image de fruits encodée en base64!",
              "name": "Fruits",
            },
            "image": "ceci est une image de pomme encodée en base64!",
            "name": "Pomme",
            "producers": Array [
              Object {
                "email": "benoit@paysan.ch",
                "firstname": "Benoît",
                "lastname": "Schöpfli",
              },
              Object {
                "email": "antoine@paysan.ch",
                "firstname": "Antoine",
                "lastname": "Rochaille",
              },
            ],
          },
        },
        Object {
          "description": "Une poire de folie!",
          "productType": Object {
            "category": Object {
              "image": "ceci est une image de fruits encodée en base64!",
              "name": "Fruits",
            },
            "image": "ceci est une image de poire encodée en base64!",
            "name": "Poire",
            "producers": Array [
              Object {
                "email": "benoit@paysan.ch",
                "firstname": "Benoît",
                "lastname": "Schöpfli",
              },
            ],
          },
        },
      ],
      "rating": null,
      "salespoint": Object {
        "address": Object {
          "city": "Yverdon",
          "country": "Suisse",
          "latitude": 1.123456789,
          "longitude": 1.1234567,
          "number": 6,
          "postalCode": "1400",
          "state": "Vaud",
          "street": "Chemin de par ici",
        },
        "name": "Chez moi",
        "schedule": Object {
          "friday": Array [
            Object {
              "closingHour": "12:00",
              "openingHour": "08:00",
            },
          ],
          "monday": Array [
            Object {
              "closingHour": "12:00",
              "openingHour": "08:00",
            },
            Object {
              "closingHour": "18:00",
              "openingHour": "13:00",
            },
          ],
          "saturday": Array [],
          "sunday": Array [],
          "thursday": Array [],
          "tuesday": Array [],
          "wednesday": Array [
            Object {
              "closingHour": "12:00",
              "openingHour": "08:00",
            },
          ],
        },
      },
      "website": "benoitpaysan.ch",
    },
  },
}
`;

exports[`Testing graphql request producers QUERY producers Testing producer(ProducerId) should get a producer by id (without salespoint) 1`] = `
Object {
  "data": Object {
    "producer": Object {
      "description": "Un vrai payouz!",
      "email": "antoine@paysan.ch",
      "emailValidated": false,
      "firstname": "Antoine",
      "followers": Array [],
      "followingProducers": Array [],
      "image": "Ceci est l'image d'un tueur encodée en base64!",
      "isAdmin": false,
      "isValidated": false,
      "lastname": "Rochaille",
      "phoneNumber": "0761435196",
      "products": Array [
        Object {
          "description": "Une pomme monnnnstre bonne!",
          "productType": Object {
            "category": Object {
              "image": "ceci est une image de fruits encodée en base64!",
              "name": "Fruits",
            },
            "image": "ceci est une image de pomme encodée en base64!",
            "name": "Pomme",
            "producers": Array [
              Object {
                "email": "benoit@paysan.ch",
                "firstname": "Benoît",
                "lastname": "Schöpfli",
              },
              Object {
                "email": "antoine@paysan.ch",
                "firstname": "Antoine",
                "lastname": "Rochaille",
              },
            ],
          },
        },
      ],
      "rating": null,
      "salespoint": null,
      "website": null,
    },
  },
}
`;

exports[`Testing graphql request producers QUERY producers Testing producerWaitingForValidation() should get all producers waiting for validation 1`] = `
Object {
  "data": Object {
    "producersWaitingForValidation": Array [
      Object {
        "description": "Un chouet gaillard!",
        "email": "benoit@paysan.ch",
        "emailValidated": false,
        "firstname": "Benoît",
        "followers": Array [],
        "followingProducers": Array [],
        "image": "Ceci est une image encodée en base64!",
        "isAdmin": false,
        "isValidated": false,
        "lastname": "Schöpfli",
        "phoneNumber": "0761435196",
        "products": Array [
          Object {
            "description": "Une pomme monnnnstre bonne!",
            "productType": Object {
              "category": Object {
                "image": "ceci est une image de fruits encodée en base64!",
                "name": "Fruits",
              },
              "image": "ceci est une image de pomme encodée en base64!",
              "name": "Pomme",
              "producers": Array [
                Object {
                  "email": "benoit@paysan.ch",
                  "firstname": "Benoît",
                  "lastname": "Schöpfli",
                },
                Object {
                  "email": "antoine@paysan.ch",
                  "firstname": "Antoine",
                  "lastname": "Rochaille",
                },
              ],
            },
          },
          Object {
            "description": "Une poire de folie!",
            "productType": Object {
              "category": Object {
                "image": "ceci est une image de fruits encodée en base64!",
                "name": "Fruits",
              },
              "image": "ceci est une image de poire encodée en base64!",
              "name": "Poire",
              "producers": Array [
                Object {
                  "email": "benoit@paysan.ch",
                  "firstname": "Benoît",
                  "lastname": "Schöpfli",
                },
              ],
            },
          },
        ],
        "rating": null,
        "salespoint": Object {
          "address": Object {
            "city": "Yverdon",
            "country": "Suisse",
            "latitude": 1.123456789,
            "longitude": 1.1234567,
            "number": 6,
            "postalCode": "1400",
            "state": "Vaud",
            "street": "Chemin de par ici",
          },
          "name": "Chez moi",
          "schedule": Object {
            "friday": Array [
              Object {
                "closingHour": "12:00",
                "openingHour": "08:00",
              },
            ],
            "monday": Array [
              Object {
                "closingHour": "12:00",
                "openingHour": "08:00",
              },
              Object {
                "closingHour": "18:00",
                "openingHour": "13:00",
              },
            ],
            "saturday": Array [],
            "sunday": Array [],
            "thursday": Array [],
            "tuesday": Array [],
            "wednesday": Array [
              Object {
                "closingHour": "12:00",
                "openingHour": "08:00",
              },
            ],
          },
        },
        "website": "benoitpaysan.ch",
      },
    ],
  },
}
`;

exports[`Testing graphql request producers QUERY producers Testing producers() should get all producers 1`] = `
Object {
  "data": Object {
    "producers": Array [
      Object {
        "description": "Un chouet gaillard!",
        "email": "benoit@paysan.ch",
        "emailValidated": false,
        "firstname": "Benoît",
        "followers": Array [],
        "followingProducers": Array [],
        "image": "Ceci est une image encodée en base64!",
        "isAdmin": false,
        "isValidated": false,
        "lastname": "Schöpfli",
        "phoneNumber": "0761435196",
        "products": Array [
          Object {
            "description": "Une pomme monnnnstre bonne!",
            "productType": Object {
              "category": Object {
                "image": "ceci est une image de fruits encodée en base64!",
                "name": "Fruits",
              },
              "image": "ceci est une image de pomme encodée en base64!",
              "name": "Pomme",
              "producers": Array [
                Object {
                  "email": "benoit@paysan.ch",
                  "firstname": "Benoît",
                  "lastname": "Schöpfli",
                },
                Object {
                  "email": "antoine@paysan.ch",
                  "firstname": "Antoine",
                  "lastname": "Rochaille",
                },
              ],
            },
          },
          Object {
            "description": "Une poire de folie!",
            "productType": Object {
              "category": Object {
                "image": "ceci est une image de fruits encodée en base64!",
                "name": "Fruits",
              },
              "image": "ceci est une image de poire encodée en base64!",
              "name": "Poire",
              "producers": Array [
                Object {
                  "email": "benoit@paysan.ch",
                  "firstname": "Benoît",
                  "lastname": "Schöpfli",
                },
              ],
            },
          },
        ],
        "rating": null,
        "salespoint": Object {
          "address": Object {
            "city": "Yverdon",
            "country": "Suisse",
            "latitude": 1.123456789,
            "longitude": 1.1234567,
            "number": 6,
            "postalCode": "1400",
            "state": "Vaud",
            "street": "Chemin de par ici",
          },
          "name": "Chez moi",
          "schedule": Object {
            "friday": Array [
              Object {
                "closingHour": "12:00",
                "openingHour": "08:00",
              },
            ],
            "monday": Array [
              Object {
                "closingHour": "12:00",
                "openingHour": "08:00",
              },
              Object {
                "closingHour": "18:00",
                "openingHour": "13:00",
              },
            ],
            "saturday": Array [],
            "sunday": Array [],
            "thursday": Array [],
            "tuesday": Array [],
            "wednesday": Array [
              Object {
                "closingHour": "12:00",
                "openingHour": "08:00",
              },
            ],
          },
        },
        "website": "benoitpaysan.ch",
      },
      Object {
        "description": "Un vrai payouz!",
        "email": "antoine@paysan.ch",
        "emailValidated": false,
        "firstname": "Antoine",
        "followers": Array [],
        "followingProducers": Array [],
        "image": "Ceci est l'image d'un tueur encodée en base64!",
        "isAdmin": false,
        "isValidated": false,
        "lastname": "Rochaille",
        "phoneNumber": "0761435196",
        "products": Array [
          Object {
            "description": "Une pomme monnnnstre bonne!",
            "productType": Object {
              "category": Object {
                "image": "ceci est une image de fruits encodée en base64!",
                "name": "Fruits",
              },
              "image": "ceci est une image de pomme encodée en base64!",
              "name": "Pomme",
              "producers": Array [
                Object {
                  "email": "benoit@paysan.ch",
                  "firstname": "Benoît",
                  "lastname": "Schöpfli",
                },
                Object {
                  "email": "antoine@paysan.ch",
                  "firstname": "Antoine",
                  "lastname": "Rochaille",
                },
              ],
            },
          },
        ],
        "rating": null,
        "salespoint": null,
        "website": null,
      },
    ],
  },
}
`;
